--- a/index.qmd
+++ b/index.qmd
@@ -75,7 +75,7 @@ in Germany (Goethe University Frankfurt, GSI/FAIR).
 ## Experience
 
 - Postdoctoral Researcher (Software & Data Systems), Goethe University Frankfurt, Frankfurt am Main, Germany
-
+- Software Engineering Intern, GSI Helmholtz Centre for Heavy Ion Research (FAIR),Darmstadt, Germany
 
 ## Education
 
