--- a/references.bib
+++ b/references.bib
@@ -1,18 +1,27 @@
-@article{kumar2021commissioning,
-  author       = {Kumar, A. and Agarwal, A. and Chatterjee, S. and Chattopadhyay, S. 
-                  and Dubey, A.K. and Ghosh, C. and Nandy, E. and Negi, V. 
-                  and Prasad, S.K. and Saini, J. and Singhal, V. and Singh, O. 
-                  and Sikder, G. and de Cuveland, J. and Deppner, I. 
-                  and Emschermann, D. and Friese, V. and Frühauf, J. 
-                  and Gumiński, M. and Herrmann, N. and Hutter, D. 
-                  and Kis, M. and Lehnert, J. and Loizeau, P.-A. 
-                  and Schmidt, C.J. and Sturm, C. and Uhlig, F. 
-                  and Zabołotny, W.},
-  title        = {Commissioning and testing of pre‑series triple {GEM} prototypes for CBM‑MuCh in the mCBM experiment at the {SIS18} facility of {GSI}},
-  journal      = {Journal of Instrumentation},
-  volume       = {16},
-  number       = {09},
-  pages        = {P09002},
-  year         = {2021},
-  doi          = {10.1088/1748-0221/16/09/P09002},
+@article{singh2023intermittency,
+  author  = {Singh, Omveer and Sharma, Anjali and Ahmad, Nazeer},
+  title   = {Intermittency analysis in relativistic hydrodynamic simulations of heavy-ion collisions at FAIR energies},
+  journal = {European Physical Journal A},
+  volume  = {59},
+  number  = {4},
+  pages   = {92},
+  year    = {2023},
+  doi     = {10.1140/epja/s10050-023-00994-w}
+}
+
+@article{ahmad2022multifractal,
+  author  = {Ahmad, Nazeer and Ahmad, Tufail and Singh, Omveer},
+  title   = {A multifractal study of charged secondaries produced in relativistic nucleus–nucleus collisions},
+  journal = {European Physical Journal Plus},
+  volume  = {137},
+  pages   = {653},
+  year    = {2022},
+  doi     = {10.1140/epjp/s13360-022-02787-4}
+}
+
+@inproceedings{rasool2015intermittency,
+  author    = {Rasool, Mir Hashim and Ahmad, M. Ayaz and Ahmad, Shafiq and Singh, Omveer},
+  title     = {Intermittency and multiplicity moments of relativistic charged particles produced in $^{32}$S–emulsion interactions at 200$A$ GeV},
+  booktitle = {Proceedings of the International Conference on Physics and Astrophysics of Quark–Gluon Plasma},
+  year      = {2015}
 }
