--- a/publications.qmd
+++ b/publications.qmd
@@ -2,7 +2,7 @@
 title: "Publications"
 description-meta: "Information, PDFs, and social metrics of papers"
 bibliography: references.bib
-csl: nature.csl
+csl: ieee.csl
 citeproc: true
 nocite: |
   @*
