--- a/posts/paper-title/index.qmd
+++ b/posts/paper-title/index.qmd
@@ -15,7 +15,7 @@ citation:
   doi: "10.1140/epja/s10050-023-00994-w"
   issued: "2023-04-29"
   volume: 59
-  article-number: 92
+  issue: 92
   url: https://link.springer.com/article/10.1140/epja/s10050-023-00994-w
 google-scholar: true
 ---
