--- a/posts.qmd
+++ b/posts.qmd
@@ -1,7 +1,7 @@
 ---
 title: "What’s New & Updated"
-subtitle: "Posts about papers, events, news, and more"
-description-meta: "Posts about papers, events, news, and more"
+subtitle: "Posts about papers"
+description-meta: "Posts about papers"
 listing: 
   sort: "date desc"
   type: default
