--- a/publications.qmd
+++ b/publications.qmd
@@ -9,7 +9,7 @@ bibliography:
   journals: bib/articles.bib
   proceedings: bib/proceedings.bib
   reports: bib/reports.bib
-csl: apa.csl
+csl: ieee.csl
 citeproc: true
 nocite: |
   @*
