--- a/contact.qmd
+++ b/contact.qmd
@@ -15,7 +15,7 @@ title-block-banner: false
 <div class="me-3 fs-4">📍</div>
 <div>
 <div class="fw-semibold">Address</div>
-<div>Mathildenstrasse, 39<br>Darmstadt, 64285<br>Germany</div>
+<div>Hegelstr., 5<br>Darmstadt, 64291<br>Germany</div>
 </div>
 </div>
 
@@ -23,7 +23,7 @@ title-block-banner: false
 <div class="me-3 fs-4">📞</div>
 <div>
 <div class="fw-semibold">Phone</div>
-<div><a href="tel:+4915161018091">+49 151 61018091</a></div>
+<div><a href="tel:+491628073291">+49 162 8073291</a></div>
 </div>
 </div>
 
@@ -31,7 +31,7 @@ title-block-banner: false
 <div class="me-3 fs-4">✉️</div>
 <div>
 <div class="fw-semibold">Email</div>
-<div><a href="mailto:omvir.ch@gmail.com">omvir.ch@gmail.com</a></div>
+<div><a href="mailto:mehul0113@gmail.com">mehul0113@gmail.com</a></div>
 </div>
 </div>
 
