--- a/index.qmd
+++ b/index.qmd
@@ -103,7 +103,7 @@ GSI Helmholtz Centre**, and **Goethe University Frankfurt**.
 
 - **Curriculum Vitae:** [PDF](files/Curriculum_Vitae_OSingh.pdf)  
 - **Publications:** [Complete list](publications.qmd) | [Selected papers](posts.qmd#category=paper)  
-- **GitHub:** [https://github.com/Om4143](https://github.com/Om4143)  
+- **GitHub:** [https://github.com/Mehul0111](https://github.com/Mehul0111)  
 - **Contact:** [Get in touch](contact.qmd)
 
 :::
