--- a/index.qmd
+++ b/index.qmd
@@ -30,7 +30,7 @@ about:
       href: https://github.com/Mehul0111
       target: _blank
 
-    - icon: orcid
+    - icon: ai orcid
       text: ORCID
       href: https://orcid.org/0000-0002-5856-1113
       target: _blank
